# Graduation-Project-AI-Server

./: .gitignore  dockerfile  requirements.txt
AI/: test.py
AI/main/: build_onnx.py  cnn_fer_train_export.py  compare_model.py  compare_speed.py
AI/main/ai/: load_model.py
AI/main/ai/rtp_process/: rtpimageproc.pyd
AI/main/module/: CNN.py
AI/main/test/: test.py
cpp/: CMakeLists.txt  readme.md  rtp_image_process.cpp  setup.py
cpp_linux/: CMakeLists.txt  rtp_image_process.cpp
server/: cert.pem  frame.ivf  key.pem  requirements.txt  test.py  websocket.py
server/ai/: load_model.py
server/ai/rtp_process/: rtpimageproc.pyd
server/conn/: conn.py
server/event/: ai_process.py  connection.py  read.py  send.py
server/helper/: dotenv.py
server/service/: variable_service.py
